MB-40415: Add Precommit hook to compaction

This allows updating local documents as part of commit.

Change-Id: I9e3d2de19ff08e595e4aae324f3c0b858f3afafd
Reviewed-on: http://review.couchbase.org/c/couchstore/+/132369
Tested-by: Build Bot <build@couchbase.com>
Well-Formed: Build Bot <build@couchbase.com>
Reviewed-by: Jim Walker <jim@couchbase.com>